<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/boshi"
    tools:context="ru.cyberblogs.as_salam.MainActivity">

    <Button
        android:text="@string/bmenu1"
        android:id="@+id/bmenu1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:background="@drawable/round"
        android:layout_marginBottom="10dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="normal|bold" />
    <Button
        android:text="@string/bmenu2"
        android:id="@+id/bmenu2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bmenu1"
        android:layout_below="@+id/bmenu1"
        android:background="@drawable/round"
        android:layout_marginBottom="10dp"
        tools:ignore="RtlHardcoded"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="normal|bold" />
    <Button
        android:text="@string/bmenu3"
        android:id="@+id/bmenu3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bmenu2"
        android:layout_below="@+id/bmenu2"
        android:background="@drawable/round"
        android:layout_marginBottom="10dp"
        tools:ignore="RtlHardcoded"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="normal|bold" />
    <Button
        android:text="@string/bmenu4"
        android:id="@+id/bmenu4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bmenu3"
        android:layout_below="@+id/bmenu3"
        android:background="@drawable/round"
        android:layout_marginBottom="10dp"
        tools:ignore="RtlHardcoded"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="normal|bold" />
    <Button
        android:text="@string/bmenu5"
        android:id="@+id/bmenu5"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bmenu4"
        android:layout_below="@+id/bmenu4"
        android:background="@drawable/round"
        android:layout_marginBottom="10dp"
        tools:ignore="RtlHardcoded"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="normal|bold" />
    <Button
        android:text="Rasm"
        android:id="@+id/bmenu6"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bmenu5"
        android:layout_below="@+id/bmenu5"
        android:background="@drawable/round"
        android:layout_marginBottom="10dp"
        tools:ignore="RtlHardcoded"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="normal|bold" />

</RelativeLayout>
