<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/boshi"
    tools:context="ru.cyberblogs.webview.Category">

    <Button
        android:text="@string/allproject3"
        android:id="@+id/suvmenu1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:background="@drawable/round"
        android:layout_marginBottom="10dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="normal|bold" />
    <Button
        android:text="@string/allproject2"
        android:id="@+id/suvmenu2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/suvmenu1"
        android:layout_below="@+id/suvmenu1"
        android:background="@drawable/round"
        android:layout_marginBottom="10dp"
        tools:ignore="RtlHardcoded"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/allproject1"
        android:id="@+id/suvmenu3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/suvmenu2"
        android:layout_below="@+id/suvmenu2"
        android:background="@drawable/round"
        android:layout_marginBottom="10dp"
        tools:ignore="RtlHardcoded"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="normal|bold" />
</RelativeLayout>