<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/masjid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/boshi"
    tools:context="ru.cyberblogs.as_salam.Fab">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:text="@string/allproject5"
                android:id="@+id/fabmenu1"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="220dp"
                android:background="@drawable/round"
                android:layout_marginBottom="10dp"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:textStyle="normal|bold" />
            <Button
                android:text="@string/allproject6"
                android:id="@+id/fabmenu2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/round"
                android:layout_marginBottom="10dp"
                tools:ignore="RtlHardcoded"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:textStyle="normal|bold" />

            <Button
                android:text="@string/allproject7"
                android:id="@+id/fabmenu3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/round"
                android:layout_marginBottom="10dp"
                tools:ignore="RtlHardcoded"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:textStyle="normal|bold" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
